--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "@vue/cli-service": "~5.0.0",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
-    "vue-template-compiler": "^2.6.14"
+    "postcss-pxtorem": "^6.0.0",
+    "vue-template-compiler": "^2.6.14",
+    "vuex": "3.6.2"
   },
   "eslintConfig": {
     "root": true,
@@ -37,7 +39,9 @@
     "parserOptions": {
       "parser": "@babel/eslint-parser"
     },
-    "rules": {}
+    "rules": {
+      "vue/multi-word-component-names":"off"
+    }
   },
   "browserslist": [
     "> 1%",
